--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
-					<li><a href="/usecases.html" class="navbar-title">Use cases</a>
+					<li><a href="usecases.html" class="navbar-title">Use cases</a>
 					</li>
-					<li><a href="/howitworks.html" class="navbar-title">How it works</a>
+					<li><a href="howitworks.html" class="navbar-title">How it works</a>
 					</li>
-					<li><a href="/developers.html" class="navbar-title">Developers</a>
+					<li><a href="developers.html" class="navbar-title">Developers</a>
 					</li>
-					<li><a href="/aboutus.html" class="navbar-title">About us</a>
+					<li><a href="aboutus.html" class="navbar-title">About us</a>
 					</li>
-					<li><a href="/contact.html" class="navbar-title">Contact</a>
+					<li><a href="contact.html" class="navbar-title">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -193,19 +193,19 @@
 						<li><a href="/">AnyFetch</a>
 						</li>
 						<li class="footer-menu-divider">&sdot;</li>
-						<li><a href="/usecases.html">Use cases</a>
+						<li><a href="usecases.html">Use cases</a>
 						</li>
 						<li class="footer-menu-divider">&sdot;</li>
-						<li><a href="/howitworks.html">How it works</a>
+						<li><a href="howitworks.html">How it works</a>
 						</li>
 						<li class="footer-menu-divider">&sdot;</li>
-						<li><a href="/developers.html">Developers</a>
+						<li><a href="developers.html">Developers</a>
 						</li>
 						<li class="footer-menu-divider">&sdot;</li>
-						<li><a href="/aboutus.html">About us</a>
+						<li><a href="aboutus.html">About us</a>
 						</li>
 						<li class="footer-menu-divider">&sdot;</li>
-						<li><a href="/contact.html">Contact</a>
+						<li><a href="contact.html">Contact</a>
 						</li>
 					</ul>
 					<p class="copyright text-muted small">Copyright &copy; AnyFetch 2014. All Rights Reserved</p>
@@ -213,6 +213,9 @@
 			</div>
 		</div>
 	</footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
 
 </body>
 
