--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">AnyFetch</a>
+				<a class="navbar-brand" href="/"><img src="images/anyfetch.svg"/> AnyFetch</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -39,9 +39,12 @@
 					</li>
 					<li><a href="aboutus.html" class="navbar-title">About us</a>
 					</li>
-					<li><a href="contact.html" class="navbar-title">Contact</a>
+					<li><a href="contact.html" class="navbar-title">Pricing</a>
+					</li>
+					<li><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Login</span></a>
 					</li>
 				</ul>
+
 			</div>
 			<!-- /.navbar-collapse -->
 		</div>
@@ -59,7 +62,7 @@
 						<h3>A complete solution built for developers</h3>
 						<hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
-							<li><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Try it now</span></a>
+							<li><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a>
 							</li>
 						</ul>
 					</div>
