--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					</li>
 					<li><a href="contact.html" class="navbar-title">Pricing</a>
 					</li>
-					<li><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Login</span></a>
+					<li><a href="http://www.anyfetch.com/app.html" class="btn btn-default btn-lg"><span class="network-name">Login</span></a>
 					</li>
 				</ul>
 
@@ -79,21 +79,35 @@
 
 		<div class="container">
 
-			<div class="col-lg-4">
+		  <div class="col-sm-6 col-md-4">
+		    <div class="thumbnail">
+		      <img src="" alt="need image here">
+		      <div class="caption">
 				<h3>Connect any data source</h3>
 				<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
-			</div>
+		      </div>
+		    </div>
+		  </div>
 
-			<div class="col-lg-4">
+		  <div class="col-sm-6 col-md-4">
+		    <div class="thumbnail">
+		      <img src="images/key.svg">
+		      <div class="caption">
 				<h3>Customize your business context</h3>
 				<p class="lead">Customize AnyFetch to your context, to instantly get relevant data from your actual tools.</p>
-			</div>
+		      </div>
+		    </div>
+		  </div>
 
-			<div class="col-lg-4">
+		  <div class="col-sm-6 col-md-4">
+		    <div class="thumbnail">
+		      <img src="images/timer.svg">
+		      <div class="caption">
 				<h3>Deliver faster</h3>
 				<p class="lead">The whole setup takes less than a few hours, that's about 100x less than enterprise search.</p>
-			</div>
-
+		      </div>
+		    </div>
+		  </div>
 		</div>
 
 	</div>
