--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/"><img src="images/anyfetch.svg"/> AnyFetch</a>
+				<a class="navbar-brand" href="/landing.anyfetch.com/"><img src="images/anyfetch.svg"/> AnyFetch</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
