Small text improvements

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		      <img src="images/key.svg">
 		      <div class="caption">
 				<h3>Customize your business context</h3>
-				<p class="lead">Customize AnyFetch to your context, to instantly get relevant data from your actual tools.</p>
+				<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
 		      </div>
 		    </div>
 		  </div>
@@ -143,7 +143,7 @@
 					<hr class="section-heading-spacer">
 					<div class="clearfix"></div>
 					<h3 class="section-heading">We search through all we have</h3>
-					<p class="lead">We search trough emails, files, cloud services, local applications. This takes time and is mostly inefficient. In a business context, the relevant information in not where we expect it to be. The last Email may never contain the google drive or dropbox link that you need. You may also not know what to search and especially you do not want to spend time searching it. That is why information has to come to us firsthand, without search. </p>
+					<p class="lead">We search trough emails, files, cloud services, local applications. This takes time and is mostly inefficient. In a business context, the relevant information is not where we expect it to be. The last email may never contain the google drive or dropbox link that you need. You may also not know what to search and you do not want to spend time searching for it. That is why information has to come to us firsthand, without search. </p>
 				</div>
 				<div class="col-lg-4 col-sm-pull-6  col-sm-4">
 					<img class="img-responsive" src="images/cloud_search.svg" alt="">
@@ -225,7 +225,7 @@
 						<li><a href="contact.html">Contact</a>
 						</li>
 					</ul>
-					<p class="copyright text-muted small">Copyright &copy; AnyFetch 2014. All Rights Reserved</p>
+					<p class="copyright text-muted small">&copy; AnyFetch 2014. All Rights Reserved</p>
 				</div>
 			</div>
 		</div>
