Use cases header and style

--- a/usecases.html
+++ b/usecases.html
@@ -58,24 +58,24 @@
 
 			<div class="col-xs-12 col-sm-9">
 				<div class="jumbotron">
-					<h1 class="title">Turn your data into information</h1>
-					<p>See how they use it</p>
+					<h1 class="title">Turn your data<br/> into information</h1>
+					<p>Context is everywhere</p>
 				</div>
 				<div class="row">
-						<div class="col-8 col-sm-8 col-lg-8 project">
-				<span class="invisible-anchor" id="project1">&nbsp</span>
-							<hr>
-							<h2>The ultimate business assistant </h2>
-							<p>We are on a mission to revolutionize CRM and the way business users interact with their data. AnyFetch provides contextual feeds providing the information you need, directly within Salesforce and Salesforce1. We created AnyFetch for Salesforce because we, ourselves, wanted to use it. Check out the dedicated website here.</p>
-							<p><a class="btn btn-default" href="#" role="button">Salesforce &raquo;</a></p>
-						</div><!--/span-->
-						<div class="col-4 col-sm-4 col-lg-4">
-							<a href="#" class="thumbnail">
-								<img src="http://placehold.it/250x400" alt="...">
-							</a>
-						</div><!--/span-->
 					<div class="col-8 col-sm-8 col-lg-8 project">
-				<span class="invisible-anchor" id="project2">&nbsp</span>
+						<span class="invisible-anchor" id="project1">&nbsp</span>
+						<hr>
+						<h2>The ultimate business assistant </h2>
+						<p>We are on a mission to revolutionize CRM and the way business users interact with their data. AnyFetch provides contextual feeds providing the information you need, directly within Salesforce and Salesforce1. We created AnyFetch for Salesforce because we, ourselves, wanted to use it. Check out the dedicated website here.</p>
+						<p><a class="btn btn-default" href="#" role="button">Salesforce &raquo;</a></p>
+					</div><!--/span-->
+					<div class="col-4 col-sm-4 col-lg-4">
+						<a href="#" class="thumbnail">
+							<img src="images/iphone_salesfetch.jpg" alt="...">
+						</a>
+					</div><!--/span-->
+					<div class="col-8 col-sm-8 col-lg-8 project">
+						<span class="invisible-anchor" id="project2">&nbsp</span>
 						<hr>
 						<h2>Revolutionizing enterprise search</h2>
 						<p>AnyFetch is trusted by IT experts in fiels such as Insurance, Banking, consulting and software development. See how IT services are leveraging AnyFetch to deliver value to their core businesses.</p>
@@ -87,11 +87,11 @@
 						</a>
 					</div><!--/span-->
 					<div class="col-8 col-sm-8 col-lg-8 project">
-				<span class="invisible-anchor" id="project3">&nbsp</span>
+						<span class="invisible-anchor" id="project3">&nbsp</span>
 						<hr>
 						<h2>Developers love it</h2>
 						<p>Check out what developers do with AnyFetch, and how they deliver value to their users by providing great user experience. It is only a matter of minutes to get to production, and you can fully test it beforehand.</p>
-						<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+						<p><a class="btn btn-default" href="developers.html" role="button">See why &raquo;</a></p>
 					</div><!--/span-->
 					<div class="col-4 col-sm-4 col-lg-4">
 						<a href="#" class="thumbnail">
@@ -103,9 +103,9 @@
 
 			<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
 				<div class="list-group">
-					<a href="#project1" class="list-group-item">Use case 1</a>
-					<a href="#project2" class="list-group-item">Use case 2</a>
-					<a href="#project3" class="list-group-item">Use case 3</a>
+					<a href="#project1" class="list-group-item">Business assistant</a>
+					<a href="#project2" class="list-group-item">Entreprise search</a>
+					<a href="#project3" class="list-group-item">Developers</a>
 				</div>
 			</div><!--/span-->
 		</div><!--/row-->
