--- a/index.html
+++ b/index.html
@@ -1,55 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
-
-	<title>AnyFetch</title>
-
-	<link rel="stylesheet" href="styles/bootstrap.min.css">
-	<link rel="stylesheet" href="styles/style.css">
-
-</head>
-
-<body>
-
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="/landing.anyfetch.com/"><img src="images/anyfetch.svg"/> AnyFetch</a>
-			</div>
-
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
-				<ul class="nav navbar-nav">
-					<li><a href="usecases.html" class="navbar-title">Use cases</a>
-					</li>
-					<li><a href="howitworks.html" class="navbar-title">How it works</a>
-					</li>
-					<li><a href="developers.html" class="navbar-title">Developers</a>
-					</li>
-					<li><a href="aboutus.html" class="navbar-title">About us</a>
-					</li>
-					<li><a href="contact.html" class="navbar-title">Pricing</a>
-					</li>
-					<li><a href="http://www.anyfetch.com/app.html" class="btn btn-default btn-lg"><span class="network-name">Login</span></a>
-					</li>
-				</ul>
-
-			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container -->
-	</nav>
+---
+title: Welcome to anyFetch
+layout: main
+---
 
 	<div class="intro-header">
 
@@ -201,39 +153,3 @@
 
 	</div>
 	<!-- /.banner -->
-
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<ul class="list-inline">
-						<li><a href="/">AnyFetch</a>
-						</li>
-						<li class="footer-menu-divider">&sdot;</li>
-						<li><a href="usecases.html">Use cases</a>
-						</li>
-						<li class="footer-menu-divider">&sdot;</li>
-						<li><a href="howitworks.html">How it works</a>
-						</li>
-						<li class="footer-menu-divider">&sdot;</li>
-						<li><a href="developers.html">Developers</a>
-						</li>
-						<li class="footer-menu-divider">&sdot;</li>
-						<li><a href="aboutus.html">About us</a>
-						</li>
-						<li class="footer-menu-divider">&sdot;</li>
-						<li><a href="contact.html">Contact</a>
-						</li>
-					</ul>
-					<p class="copyright text-muted small">&copy; AnyFetch 2014. All Rights Reserved</p>
-				</div>
-			</div>
-		</div>
-	</footer>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="scripts/bootstrap.min.js"></script>
-
-</body>
-
-</html>
