--- a/usecases.html
+++ b/usecases.html
@@ -1,56 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
-
-	<title>AnyFetch</title>
-
-	<link rel="stylesheet" href="styles/bootstrap.min.css">
-	<link rel="stylesheet" href="styles/style.css">
-	<link rel="stylesheet" href="styles/usecases.css">
-
-</head>
-
-<body>
-
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="/landing.anyfetch.com/"><img src="images/anyfetch.svg"/> AnyFetch</a>
-			</div>
-
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
-				<ul class="nav navbar-nav">
-					<li><a href="usecases.html" class="navbar-title">Use cases</a>
-					</li>
-					<li><a href="howitworks.html" class="navbar-title">How it works</a>
-					</li>
-					<li><a href="developers.html" class="navbar-title">Developers</a>
-					</li>
-					<li><a href="aboutus.html" class="navbar-title">About us</a>
-					</li>
-					<li><a href="contact.html" class="navbar-title">Pricing</a>
-					</li>
-					<li><a href="http://www.anyfetch.com/app.html" class="btn btn-default btn-lg"><span class="network-name">Login</span></a>
-					</li>
-				</ul>
-
-			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container -->
-	</nav>
+---
+title: anyFetch usecases
+layout: main
+css: usecases.css
+---
 
 	<div class="container content">
 
@@ -63,7 +15,7 @@
 				</div>
 				<div class="row">
 					<div class="col-8 col-sm-8 col-lg-8 project">
-						<span class="invisible-anchor" id="project1">&nbsp</span>
+						<span class="invisible-anchor" id="project1">&nbsp;</span>
 						<hr>
 						<h2>The ultimate business assistant </h2>
 						<p>We are on a mission to revolutionize CRM and the way business users interact with their data. AnyFetch provides contextual feeds providing the information you need, directly within Salesforce and Salesforce1. We created AnyFetch for Salesforce because we, ourselves, wanted to use it. Check out the dedicated website here.</p>
@@ -75,7 +27,7 @@
 						</a>
 					</div><!--/span-->
 					<div class="col-8 col-sm-8 col-lg-8 project">
-						<span class="invisible-anchor" id="project2">&nbsp</span>
+						<span class="invisible-anchor" id="project2">&nbsp;</span>
 						<hr>
 						<h2>Revolutionizing enterprise search</h2>
 						<p>AnyFetch is trusted by IT experts in fiels such as Insurance, Banking, consulting and software development. See how IT services are leveraging AnyFetch to deliver value to their core businesses.</p>
@@ -87,7 +39,7 @@
 						</a>
 					</div><!--/span-->
 					<div class="col-8 col-sm-8 col-lg-8 project">
-						<span class="invisible-anchor" id="project3">&nbsp</span>
+						<span class="invisible-anchor" id="project3">&nbsp;</span>
 						<hr>
 						<h2>Developers love it</h2>
 						<p>Check out what developers do with AnyFetch, and how they deliver value to their users by providing great user experience. It is only a matter of minutes to get to production, and you can fully test it beforehand.</p>
@@ -110,40 +62,3 @@
 			</div><!--/span-->
 		</div><!--/row-->
 	</div><!--/.container-->
-
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<ul class="list-inline">
-						<li><a href="/">AnyFetch</a>
-						</li>
-						<li class="footer-menu-divider">&sdot;</li>
-						<li><a href="usecases.html">Use cases</a>
-						</li>
-						<li class="footer-menu-divider">&sdot;</li>
-						<li><a href="howitworks.html">How it works</a>
-						</li>
-						<li class="footer-menu-divider">&sdot;</li>
-						<li><a href="developers.html">Developers</a>
-						</li>
-						<li class="footer-menu-divider">&sdot;</li>
-						<li><a href="aboutus.html">About us</a>
-						</li>
-						<li class="footer-menu-divider">&sdot;</li>
-						<li><a href="contact.html">Contact</a>
-						</li>
-					</ul>
-					<p class="copyright text-muted small">Copyright &copy; AnyFetch 2014. All Rights Reserved</p>
-				</div>
-			</div>
-		</div>
-	</footer>
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="scripts/bootstrap.min.js"></script>
-	<script src="scripts/tools.js"></script>
-
-</body>
-
-</html>
