--- a/usecases.html
+++ b/usecases.html
@@ -35,7 +35,7 @@ css: usecases.css
 					</div><!--/span-->
 					<div class="col-4 col-sm-4 col-lg-4">
 						<a href="#" class="thumbnail">
-							<img src="http://placehold.it/250x400" alt="...">
+							<img src="images/screen_anyfetch.jpg" alt="...">
 						</a>
 					</div><!--/span-->
 					<div class="col-8 col-sm-8 col-lg-8 project">
