--- a/index.html
+++ b/index.html
@@ -1,155 +1,156 @@
 ---
 title: Welcome to anyFetch
 layout: main
+css: index.css
 ---
 
-	<div class="intro-header">
+<div class="intro-header">
 
-		<div class="container">
+	<div class="container">
 
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="intro-message">
-						<h1>Get Contextual Intelligence</h1>
-						<h3>A complete solution built for developers</h3>
-						<hr class="intro-divider">
-						<ul class="list-inline intro-social-buttons">
-							<li><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-
-		</div>
-		<!-- /.container -->
-
-	</div>
-	<!-- /.intro-header -->
-
-	<div class="content-section-b">
-
-		<div class="container">
-
-		  <div class="col-sm-6 col-md-4">
-		    <div class="thumbnail">
-		      <img src="" alt="need image here">
-		      <div class="caption">
-				<h3>Connect any data source</h3>
-				<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
-		      </div>
-		    </div>
-		  </div>
-
-		  <div class="col-sm-6 col-md-4">
-		    <div class="thumbnail">
-		      <img src="images/key.svg">
-		      <div class="caption">
-				<h3>Customize your business context</h3>
-				<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
-		      </div>
-		    </div>
-		  </div>
-
-		  <div class="col-sm-6 col-md-4">
-		    <div class="thumbnail">
-		      <img src="images/timer.svg">
-		      <div class="caption">
-				<h3>Deliver faster</h3>
-				<p class="lead">The whole setup takes less than a few hours, that's about 100x less than enterprise search.</p>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-
-	</div>
-
-	<div class="content-section-a">
-
-		<div class="container">
-
-			<div class="row">
-				<div class="col-lg-5 col-sm-6">
-					<hr class="section-heading-spacer">
-					<div class="clearfix"></div>
-					<h3 class="section-heading">Everything starts with a context</h3>
-					<p class="lead">Preparing a meeting, answering a customer, understanding a project, or simply looking for information. All these situations are as many different "contexts" that require a global understanding of the situation. Today, we gather information from all our data sources and applications using search.</p>
-				</div>
-				<div class="col-lg-4 col-lg-offset-2 col-sm-4">
-					<img class="img-responsive" src="images/signs.svg" alt="">
-				</div>
-			</div>
-
-		</div>
-		<!-- /.container -->
-
-	</div>
-	<!-- /.content-section-a -->
-
-	<div class="content-section-b">
-
-		<div class="container">
-
-			<div class="row">
-				<div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-					<hr class="section-heading-spacer">
-					<div class="clearfix"></div>
-					<h3 class="section-heading">We search through all we have</h3>
-					<p class="lead">We search trough emails, files, cloud services, local applications. This takes time and is mostly inefficient. In a business context, the relevant information is not where we expect it to be. The last email may never contain the google drive or dropbox link that you need. You may also not know what to search and you do not want to spend time searching for it. That is why information has to come to us firsthand, without search. </p>
-				</div>
-				<div class="col-lg-4 col-sm-pull-6  col-sm-4">
-					<img class="img-responsive" src="images/cloud_search.svg" alt="">
-				</div>
-			</div>
-
-		</div>
-		<!-- /.container -->
-
-	</div>
-	<!-- /.content-section-b -->
-
-	<div class="content-section-a">
-
-		<div class="container">
-
-			<div class="row">
-				<div class="col-lg-5 col-sm-6">
-					<hr class="section-heading-spacer">
-					<div class="clearfix"></div>
-					<h3 class="section-heading">The solution is contextual</h3>
-					<p class="lead">Contextual means that whatever your job is, you (the user) get all and only the information you need. It means that you don't need to switch applications or use another search or aggregation app. You get a contextual feed directly within the application or software you are using. In the end it's efficiency in your relationships, perfect meeting preparation and powering data into an asset.</p>
-				</div>
-				<div class="col-lg-4 col-lg-offset-2 col-sm-4">
-					<img class="img-responsive" src="images/net.svg" alt="">
-				</div>
-			</div>
-
-		</div>
-		<!-- /.container -->
-
-	</div>
-	<!-- /.content-section-a -->
-
-	<div class="banner">
-
-		<div class="container">
-
-			<div class="row">
-				<div class="col-lg-6">
-					<h2>TRY IT ONLINE</h2>
-				</div>
-				<div class="col-lg-6">
-					<ul class="list-inline banner-social-buttons">
-						<li><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Docs</span></a>
-						</li>
-						<li><a href="http://developers.anyfetch.com/guides/tutorials/hello-world.html" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Demo</span></a>
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="intro-message">
+					<h1>Get Contextual Intelligence</h1>
+					<h3>A complete solution built for developers</h3>
+					<hr class="intro-divider">
+					<ul class="list-inline intro-social-buttons">
+						<li><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a>
 						</li>
 					</ul>
 				</div>
 			</div>
-
 		</div>
-		<!-- /.container -->
 
 	</div>
-	<!-- /.banner -->
+	<!-- /.container -->
+
+</div>
+<!-- /.intro-header -->
+
+<div class="content-section-b">
+
+	<div class="container">
+
+	  <div class="col-sm-6 col-md-4">
+	    <div class="thumbnail">
+	      <img src="" alt="need image here">
+	      <div class="caption">
+			<h3>Connect any data source</h3>
+			<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
+	      </div>
+	    </div>
+	  </div>
+
+	  <div class="col-sm-6 col-md-4">
+	    <div class="thumbnail">
+	      <img src="images/key.svg">
+	      <div class="caption">
+			<h3>Customize your business context</h3>
+			<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
+	      </div>
+	    </div>
+	  </div>
+
+	  <div class="col-sm-6 col-md-4">
+	    <div class="thumbnail">
+	      <img src="images/timer.svg">
+	      <div class="caption">
+			<h3>Deliver faster</h3>
+			<p class="lead">The whole setup takes less than a few hours, that's about 100x less than enterprise search.</p>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+</div>
+
+<div class="content-section-a">
+
+	<div class="container">
+
+		<div class="row">
+			<div class="col-lg-5 col-sm-6">
+				<hr class="section-heading-spacer">
+				<div class="clearfix"></div>
+				<h3 class="section-heading">Everything starts with a context</h3>
+				<p class="lead">Preparing a meeting, answering a customer, understanding a project, or simply looking for information. All these situations are as many different "contexts" that require a global understanding of the situation. Today, we gather information from all our data sources and applications using search.</p>
+			</div>
+			<div class="col-lg-4 col-lg-offset-2 col-sm-4">
+				<img class="img-responsive" src="images/signs.svg" alt="">
+			</div>
+		</div>
+
+	</div>
+	<!-- /.container -->
+
+</div>
+<!-- /.content-section-a -->
+
+<div class="content-section-b">
+
+	<div class="container">
+
+		<div class="row">
+			<div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+				<hr class="section-heading-spacer">
+				<div class="clearfix"></div>
+				<h3 class="section-heading">We search through all we have</h3>
+				<p class="lead">We search trough emails, files, cloud services, local applications. This takes time and is mostly inefficient. In a business context, the relevant information is not where we expect it to be. The last email may never contain the google drive or dropbox link that you need. You may also not know what to search and you do not want to spend time searching for it. That is why information has to come to us firsthand, without search. </p>
+			</div>
+			<div class="col-lg-4 col-sm-pull-6  col-sm-4">
+				<img class="img-responsive" src="images/cloud_search.svg" alt="">
+			</div>
+		</div>
+
+	</div>
+	<!-- /.container -->
+
+</div>
+<!-- /.content-section-b -->
+
+<div class="content-section-a">
+
+	<div class="container">
+
+		<div class="row">
+			<div class="col-lg-5 col-sm-6">
+				<hr class="section-heading-spacer">
+				<div class="clearfix"></div>
+				<h3 class="section-heading">The solution is contextual</h3>
+				<p class="lead">Contextual means that whatever your job is, you (the user) get all and only the information you need. It means that you don't need to switch applications or use another search or aggregation app. You get a contextual feed directly within the application or software you are using. In the end it's efficiency in your relationships, perfect meeting preparation and powering data into an asset.</p>
+			</div>
+			<div class="col-lg-4 col-lg-offset-2 col-sm-4">
+				<img class="img-responsive" src="images/net.svg" alt="">
+			</div>
+		</div>
+
+	</div>
+	<!-- /.container -->
+
+</div>
+<!-- /.content-section-a -->
+
+<div class="banner">
+
+	<div class="container">
+
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>TRY IT ONLINE</h2>
+			</div>
+			<div class="col-lg-6">
+				<ul class="list-inline banner-social-buttons">
+					<li><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Docs</span></a>
+					</li>
+					<li><a href="http://developers.anyfetch.com/guides/tutorials/hello-world.html" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Demo</span></a>
+					</li>
+				</ul>
+			</div>
+		</div>
+
+	</div>
+	<!-- /.container -->
+
+</div>
+<!-- /.banner -->
