--- a/index.html
+++ b/index.html
@@ -32,35 +32,35 @@ css: index.css
 
 	<div class="container">
 
-	  <div class="col-sm-6 col-md-4">
-	    <div class="thumbnail">
-	      <img src="" alt="need image here">
-	      <div class="caption">
-			<h3>Connect any data source</h3>
-			<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
-	      </div>
-	    </div>
-	  </div>
+		<div class="col-sm-6 col-md-4">
+			<div class="thumbnail">
+				<img src="images/connections.svg">
+				<div class="caption">
+					<h3>Connect any data source</h3>
+					<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
+				</div>
+			</div>
+		</div>
 
-	  <div class="col-sm-6 col-md-4">
-	    <div class="thumbnail">
-	      <img src="images/key.svg">
-	      <div class="caption">
-			<h3>Customize your business context</h3>
-			<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
-	      </div>
-	    </div>
-	  </div>
+		<div class="col-sm-6 col-md-4">
+			<div class="thumbnail">
+				<img src="images/key.svg">
+				<div class="caption">
+					<h3>Customize your business context</h3>
+					<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
+				</div>
+			</div>
+		</div>
 
-	  <div class="col-sm-6 col-md-4">
-	    <div class="thumbnail">
-	      <img src="images/timer.svg">
-	      <div class="caption">
-			<h3>Deliver faster</h3>
-			<p class="lead">The whole setup takes less than a few hours, that's about 100x less than enterprise search.</p>
-	      </div>
-	    </div>
-	  </div>
+		<div class="col-sm-6 col-md-4">
+			<div class="thumbnail">
+				<img src="images/timer.svg">
+				<div class="caption">
+					<h3>Deliver faster</h3>
+					<p class="lead">The whole setup takes less than a few hours, that's about 100x less than enterprise search.</p>
+				</div>
+			</div>
+		</div>
 	</div>
 
 </div>
@@ -137,15 +137,26 @@ css: index.css
 
 		<div class="row">
 			<div class="col-lg-6">
-				<h2>TRY IT ONLINE</h2>
+				<h2>They love AnyFetch</h2>
 			</div>
 			<div class="col-lg-6">
 				<ul class="list-inline banner-social-buttons">
-					<li><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Docs</span></a>
-					</li>
-					<li><a href="http://developers.anyfetch.com/guides/tutorials/hello-world.html" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Demo</span></a>
+					<li><a href="use-cases.html" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Use cases</span></a>
 					</li>
 				</ul>
+			</div>
+		</div>
+		<br />
+		<br />
+		<div class="row">
+			<div class="col-lg-4 col-sm-4 partner-container">
+				<img class="partner-img" src="images/salesforce.png" >
+			</div>
+			<div class="col-lg-4 col-sm-4 partner-container">
+				<img class="partner-img" src="images/axa_white.png" >
+			</div>
+			<div class="col-lg-4 col-sm-4 partner-container">
+				<img class="partner-img" src="images/sopra_white.png" >
 			</div>
 		</div>
 
