--- a/use-cases.html
+++ b/use-cases.html
@@ -47,7 +47,7 @@ css: use-cases.css
 				</div><!--/span-->
 				<div class="col-4 col-sm-4 col-lg-4">
 					<a href="#" class="thumbnail">
-						<img src="http://placehold.it/250x400" alt="...">
+						<img src="images/screen_code.jpg" alt="...">
 					</a>
 				</div><!--/span-->
 			</div><!--/row-->
