--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@ css: index.css
 			<div class="col-lg-5 col-sm-6">
 				<hr class="section-heading-spacer">
 				<div class="clearfix"></div>
-				<h3 class="section-heading">Everything starts with a context</h3>
+				<h3>Many different contexts...</h3>
+				<h4 class="section-heading">...that require a global understanding of the situation</h4>
 				<p class="lead">Preparing a meeting, answering a customer, understanding a project, or simply looking for information. All these situations are as many different "contexts" that require a global understanding of the situation. Today, we gather information from all our data sources and applications using search.</p>
+					<p><a class="btn btn-default" href="#" role="button">View use cases &raquo;</a></p>
 			</div>
 			<div class="col-lg-4 col-lg-offset-2 col-sm-4">
 				<img class="img-responsive" src="images/signs.svg" alt="">
@@ -95,8 +97,10 @@ css: index.css
 			<div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
 				<hr class="section-heading-spacer">
 				<div class="clearfix"></div>
-				<h3 class="section-heading">We search through all we have</h3>
+				<h3>We search through all that we have...</h3>
+				<h4 class="section-heading">...that is why information has to come to us firsthand, without search</h4>
 				<p class="lead">We search trough emails, files, cloud services, local applications. This takes time and is mostly inefficient. In a business context, the relevant information is not where we expect it to be. The last email may never contain the google drive or dropbox link that you need. You may also not know what to search and you do not want to spend time searching for it. That is why information has to come to us firsthand, without search. </p>
+					<p><a class="btn btn-default" href="use-cases.html" role="button">See how it works &raquo;</a></p>
 			</div>
 			<div class="col-lg-4 col-sm-pull-6  col-sm-4">
 				<img class="img-responsive" src="images/cloud_search.svg" alt="">
@@ -117,8 +121,10 @@ css: index.css
 			<div class="col-lg-5 col-sm-6">
 				<hr class="section-heading-spacer">
 				<div class="clearfix"></div>
-				<h3 class="section-heading">The solution is contextual</h3>
+				<h3>The solution is contextual...</h3>
+				<h4 class="section-heading">...yeah man</h4>
 				<p class="lead">Contextual means that whatever your job is, you (the user) get all and only the information you need. It means that you don't need to switch applications or use another search or aggregation app. You get a contextual feed directly within the application or software you are using. In the end it's efficiency in your relationships, perfect meeting preparation and powering data into an asset.</p>
+					<p><a class="btn btn-default" href="#" role="button">Read more &raquo;</a></p>
 			</div>
 			<div class="col-lg-4 col-lg-offset-2 col-sm-4">
 				<img class="img-responsive" src="images/net.svg" alt="">
