--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ css: index.css
 				<h3>Many different contexts...</h3>
 				<h4 class="section-heading">...that require a global understanding of the situation</h4>
 				<p class="lead">Preparing a meeting, answering a customer, understanding a project, or simply looking for information. All these situations are as many different "contexts" that require a global understanding of the situation. Today, we gather information from all our data sources and applications using search.</p>
-					<p><a class="btn btn-default" href="#" role="button">View use cases &raquo;</a></p>
+					<p><a class="btn btn-default" href="use-cases.html" role="button">View use cases &raquo;</a></p>
 			</div>
 			<div class="col-lg-4 col-lg-offset-2 col-sm-4">
 				<img class="img-responsive" src="images/signs.svg" alt="">
@@ -100,7 +100,7 @@ css: index.css
 				<h3>We search through all that we have...</h3>
 				<h4 class="section-heading">...that is why information has to come to us firsthand, without search</h4>
 				<p class="lead">We search trough emails, files, cloud services, local applications. This takes time and is mostly inefficient. In a business context, the relevant information is not where we expect it to be. The last email may never contain the google drive or dropbox link that you need. You may also not know what to search and you do not want to spend time searching for it. That is why information has to come to us firsthand, without search. </p>
-					<p><a class="btn btn-default" href="use-cases.html" role="button">See how it works &raquo;</a></p>
+					<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/using/provider.html" role="button">Connect a provider &raquo;</a></p>
 			</div>
 			<div class="col-lg-4 col-sm-pull-6  col-sm-4">
 				<img class="img-responsive" src="images/cloud_search.svg" alt="">
