--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@ css: index.css
 			<div class="col-lg-6">
 				<h2>They love AnyFetch</h2>
 			</div>
-			<div class="col-lg-6">
+			<!-- <div class="col-lg-6">
 				<ul class="list-inline banner-social-buttons">
 					<li><a href="use-cases.html" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Use cases</span></a>
 					</li>
 				</ul>
-			</div>
+			</div> -->
 		</div>
 		<br />
 		<br />
