--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@ css: index.css
 			<div class="col-lg-6">
 				<h2>They love AnyFetch</h2>
 			</div>
-			<!-- <div class="col-lg-6">
+			<div class="col-lg-6">
 				<ul class="list-inline banner-social-buttons">
 					<li><a href="use-cases.html" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Use cases</span></a>
 					</li>
 				</ul>
-			</div> -->
+			</div>
 		</div>
 		<br />
 		<br />
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col-lg-4 col-sm-4 partner-container">
 				<img class="partner-img" src="images/salesforce.png" >
 			</div>
@@ -164,7 +164,7 @@ css: index.css
 			<div class="col-lg-4 col-sm-4 partner-container">
 				<img class="partner-img" src="images/sopra_white.png" >
 			</div>
-		</div>
+		</div> -->
 
 	</div>
 	<!-- /.container -->
