--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ css: index.css
 
 		<div class="row">
 			<div class="col-lg-6">
-				<h2>They love AnyFetch</h2>
+				<h2>See how they use AnyFetch</h2>
 			</div>
 			<div class="col-lg-6">
 				<ul class="list-inline banner-social-buttons">
