Link to app.anyfetch.com

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ css: index.css
 				<img src="images/timer.svg">
 				<div class="caption">
 					<h3>Deliver faster</h3>
-					<p class="lead">The whole setup takes less than a few hours, that's about 100x less than enterprise search.</p>
+					<p class="lead">The whole setup takes less than a few hours, that's about 100&times; less than enterprise search.</p>
 				</div>
 			</div>
 		</div>
