--- a/developers.html
+++ b/developers.html
@@ -4,52 +4,38 @@ layout: main
 css: developers.css
 ---
 
-<div class="content-section-a">
+<div class="container content">
 
-	<div class="container">
+	<div class="jumbotron">
+		<h1 class="title">Turn your data<br> into information</h1>
+		<p>Context is everywhere</p>
+	</div>
 
-		<div class="row">
-			<div class="col-lg-5 col-sm-6">
-				<hr class="section-heading-spacer">
-				<div class="clearfix"></div>
-				<h3>Build...</h3>
-				<h4 class="section-heading"></h4>
-				<p class="lead">Implementing a search engine is way too complicated and requires true expertise. This service must be reliable at any time and is reliant of its sources. It requires a lot of iterations to tune it perfectly and provide a key features for your employees.
-				Despite the search algorithms you must be able to gather, filter, shape and store the data you want to search through. You will have to respond quickly to all changes made to your sources APIs.
-					Upgradability and reusability make a search engine very expensive to build and maintain.</p>
-				</div>
-				<div class="col-lg-4 col-lg-offset-2 col-sm-4">
-					<img class="img-responsive" src="images/tools.svg" alt="">
-				</div>
-			</div>
-
+	<div class="row">
+		<div class="col-lg-6 content-column thumbnail">
+				<img src="images/tools.svg" style="width: 140px; height: 140px;">
 		</div>
-		<!-- /.container -->
+		<div class="col-lg-6 content-column thumbnail column-right">
+				<img src="images/buy.svg" style="width: 140px; height: 140px;">
+		</div>
+	</div>
+
+	<div class="row row-text">
+		<div class="col-lg-6 content-column">
+			<h2>Build</h2>
+			<p>Implementing a search engine is way too complicated and requires true expertise. This service must be reliable at any time and is reliant of its sources. It requires a lot of iterations to tune it perfectly and provide a key features for your employees.
+				Despite the search algorithms you must be able to gather, filter, shape and store the data you want to search through. You will have to respond quickly to all changes made to your sources APIs.
+				Upgradability and reusability make a search engine very expensive to build and maintain.</p>
+				<p><a class="btn btn-default" href="how-it-works.html" role="button">See how it works »</a></p>
+		</div><!-- /.col-lg-5 -->
+
+			<div class="col-lg-6 content-column column-right">
+				<h2>Buy</h2>
+				<p>As IT is moving to the cloud, enterprise search has gone obsolete. Buying software and maintaining it is from another age. But legacy services are still here and have to be taken into consideration. Cloud and legacy services have to cohabitate in a new way, that enables tangible value creation for the end user.
+					We have always focused on upgradability, maintainability, availability, efficiency and reusability to deliver a plug-and-play solution that you can ship and make profitable as soon as you give it a try.</p>
+					<p><a class="btn btn-default" href="http://app.anyfetch.com" role="button">Get started »</a></p>
+			</div><!-- /.col-lg-5 -->
 
 	</div>
-	<!-- /.content-section-a -->
 
-	<div class="content-section-b">
-
-		<div class="container">
-
-			<div class="row">
-				<div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-					<hr class="section-heading-spacer">
-					<div class="clearfix"></div>
-					<h3>... or Buy</h3>
-					<h4 class="section-heading"></h4>
-					<p class="lead">As IT is moving to the cloud, enterprise search has gone obsolete. Buying software and maintaining it is from another age. But legacy services are still here and have to be taken into consideration. Cloud and legacy services have to cohabitate in a new way, that enables tangible value creation for the end user.
-					We have always focused on upgradability, maintainability, availability, efficiency and reusability to deliver a plug-and-play solution that you can ship and make profitable as soon as you give it a try. </p>
-					<p><a class="btn btn-default" href="http://developers.anyfetch.com" role="button">Get started &raquo;</a></p>
-					</div>
-					<div class="col-lg-4 col-sm-pull-6  col-sm-4">
-						<img class="img-responsive" src="images/buy.svg" alt="">
-					</div>
-				</div>
-
-			</div>
-			<!-- /.container -->
-
-		</div>
-<!-- /.content-section-b -->
+</div>
