--- a/use-cases.html
+++ b/use-cases.html
@@ -26,6 +26,13 @@ css: use-cases.css
 						<img src="images/iphone_salesfetch.jpg" alt="...">
 					</a>
 				</div><!--/span-->
+			</div>
+			<div class="row">
+				<div class="col-4 col-sm-4 col-lg-4">
+					<a href="#" class="thumbnail">
+						<img src="images/screen_anyfetch.jpg" alt="...">
+					</a>
+				</div><!--/span-->
 				<div class="col-8 col-sm-8 col-lg-8 project">
 					<span class="invisible-anchor" id="project2">&nbsp;</span>
 					<hr>
@@ -33,11 +40,8 @@ css: use-cases.css
 					<p>AnyFetch is trusted by IT experts in fiels such as Insurance, Banking, consulting and software development. See how IT services are leveraging AnyFetch to deliver value to their core businesses.</p>
 					<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
 				</div><!--/span-->
-				<div class="col-4 col-sm-4 col-lg-4">
-					<a href="#" class="thumbnail">
-						<img src="images/screen_anyfetch.jpg" alt="...">
-					</a>
-				</div><!--/span-->
+			</div>
+			<div class="row">
 				<div class="col-8 col-sm-8 col-lg-8 project">
 					<span class="invisible-anchor" id="project3">&nbsp;</span>
 					<hr>
