--- a/index-5.html
+++ b/index-5.html
@@ -4,18 +4,23 @@ layout: main
 css: index.css
 ---
 
-<div class="intro-header">
+<div class="" style="background-image:url(../images/header.jpg)">
 
 	<div class="container">
 
 		<div class="row">
 			<div class="col-lg-12">
-				<div class="intro-message">
-					<h1>Get Contextual Intelligence</h1>
-					<h3>A complete solution built for developers</h3>
+				<div style="background-color:rgba(1,1,1,0)" class="jumbotron">
+					<br><br><br><br><br>
+					<h1 style="text-align:center;color:white">Stop searching, start working!</h1>
+					<br>
+					<br>
+					<h2 style="text-align:center;color:white">A complete solution built for developers</h3>
 					<hr class="intro-divider">
-					<ul class="list-inline intro-social-buttons">
+					<ul class="list-inline intro-social-buttons" style="text-align:center">
 						<li><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a>
+						</li>
+						<li><a href="mailto:contact@anyfetch.com" class="btn btn-default btn-lg"><span class="network-name">Contact us</span></a>
 						</li>
 					</ul>
 				</div>
@@ -62,10 +67,16 @@ css: index.css
 			</div>
 		</div>
 	</div>
-
+	<div>
+		<ul class="list-inline intro-social-buttons" style="text-align:center">
+			<li><a href="http://anyfetch.com/how-it-works.html" class="btn btn-default btn-lg"><span class="network-name">How it works</span></a>
+			</li>
+		</ul>
+	</div>
 </div>
 
-<div class="content-section-a">
+
+<!-- <div class="content-section-a">
 
 	<div class="container">
 
@@ -83,12 +94,12 @@ css: index.css
 		</div>
 
 	</div>
-	<!-- /.container -->
+	
 
-</div>
+</div> -->
 <!-- /.content-section-a -->
 
-<div class="content-section-b">
+<!-- <div class="content-section-b">
 
 	<div class="container">
 
@@ -106,12 +117,12 @@ css: index.css
 		</div>
 
 	</div>
-	<!-- /.container -->
+	
 
-</div>
+</div> -->
 <!-- /.content-section-b -->
 
-<div class="content-section-a">
+<!-- <div class="content-section-a">
 
 	<div class="container">
 
@@ -129,9 +140,9 @@ css: index.css
 		</div>
 
 	</div>
-	<!-- /.container -->
+	
 
-</div>
+</div> -->
 <!-- /.content-section-a -->
 
 <div class="banner">
