fixed use case link to Salesfetch website

--- a/use-cases.html
+++ b/use-cases.html
@@ -19,7 +19,7 @@ css: use-cases.css
 					<hr>
 					<h2>The ultimate business assistant </h2>
 					<p>We are on a mission to revolutionize CRM and the way business users interact with their data. AnyFetch provides contextual feeds providing the information you need, directly within Salesforce and Salesforce1. We created AnyFetch for Salesforce because we, ourselves, wanted to use it. Check out the dedicated website here.</p>
-					<p><a class="btn btn-default" href="#" role="button">Salesforce &raquo;</a></p>
+					<p><a class="btn btn-default" href="http://salesfetch.anyfetch.com" role="button">Salesforce &raquo;</a></p>
 				</div><!--/span-->
 				<div class="col-4 col-sm-4 col-lg-4">
 					<a href="#" class="thumbnail">
