Build or buy changes

--- a/use-cases.html
+++ b/use-cases.html
@@ -38,7 +38,7 @@ css: use-cases.css
 					<hr>
 					<h2>Revolutionizing enterprise search</h2>
 					<p>AnyFetch is trusted by IT experts in fiels such as Insurance, Banking, consulting and software development. See how IT services are leveraging AnyFetch to deliver value to their core businesses.</p>
-					<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+					<p><a class="btn btn-default" href="./how-it-works.html" role="button">View details &raquo;</a></p>
 				</div><!--/span-->
 			</div>
 			<div class="row">
