--- a/developers.html
+++ b/developers.html
@@ -37,7 +37,7 @@ css: developers.css
 				<h2>Buy</h2>
 				<p>As IT is moving to the cloud, buying software and maintaining it becomes obsolete, but:</p>
 					<ul>
-						<li>Legacy services are still here and cohabitate with applications used in the consumer world</li>
+						<li>Legacy services are still here with applications used in the consumer world</li>
 						<li>Enterprise search solutions have not evolved to handle this shift</li>
 					</ul>
 
