--- a/about-us.html
+++ b/about-us.html
@@ -12,16 +12,59 @@ css: about-us.css
 		<div class="col-lg-12">
 			<h2>What is AnyFetch ?</h2>
 			<hr>
-			<p>We created anyFetch because we needed a product that : <br />
+			<p class="biography">We created anyFetch because we needed a product that : <br />
 
-Accepts data from both cloud and local data sources <br />
-Accepts any data format <br />
-Is cloud based, mobile first <br />
-Can be used by large, small businesses and developers <br />
-Delivers immediate value and can be fully tested online <br />
-IT professionals can trust and want to implement<br />
+				Accepts data from both cloud and local data sources <br />
+				Accepts any data format <br />
+				Is cloud based, mobile first <br />
+				Can be used by large, small businesses and developers <br />
+				Delivers immediate value and can be fully tested online <br />
+				IT professionals can trust and want to implement<br /></p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<h2>Our team</h2>
+				<hr>
+				<!-- <div class="row"> -->
+					<div class="col-lg-3">
+						<div class="thumbnail-portrait">
+						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+							<div class="caption">
+								<h4>John Smith</h4>
+								<p>CEO</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="thumbnail-portrait">
+						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+							<div class="caption">
+								<h4>John Smith</h4>
+								<p>CTO</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="thumbnail-portrait">
+						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+							<div class="caption">
+								<h4>John Smith</h4>
+								<p>Intern</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3">
+						<div class="thumbnail-portrait">
+						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+							<div class="caption">
+								<h4>John Smith</h4>
+								<p>Nombril centré</p>
+							</div>
+						</div>
+					</div>
+				<!-- </div> -->
+			</div>
 		</div>
 
 	</div>
-
-</div>
