css merge cause thumbnail to inherit -50px margin, fixed

--- a/use-cases.html
+++ b/use-cases.html
@@ -22,14 +22,14 @@ css: use-cases.css
 					<p><a class="btn btn-default" href="#" role="button">Salesforce &raquo;</a></p>
 				</div><!--/span-->
 				<div class="col-4 col-sm-4 col-lg-4">
-					<a href="#" class="thumbnail">
+					<a href="#" class="thumbnail use-case">
 						<img src="images/iphone_salesfetch.jpg" alt="...">
 					</a>
 				</div><!--/span-->
 			</div>
 			<div class="row">
 				<div class="col-4 col-sm-4 col-lg-4">
-					<a href="#" class="thumbnail">
+					<a href="#" class="thumbnail use-case">
 						<img src="images/screen_anyfetch.jpg" alt="...">
 					</a>
 				</div><!--/span-->
@@ -50,7 +50,7 @@ css: use-cases.css
 					<p><a class="btn btn-default" href="developers.html" role="button">See why &raquo;</a></p>
 				</div><!--/span-->
 				<div class="col-4 col-sm-4 col-lg-4">
-					<a href="#" class="thumbnail">
+					<a href="#" class="thumbnail use-case">
 						<img src="images/screen_code.jpg" alt="...">
 					</a>
 				</div><!--/span-->
