--- a/developers.html
+++ b/developers.html
@@ -12,10 +12,10 @@ css: developers.css
 	</div>
 
 	<div class="row">
-		<div class="col-lg-6 content-column thumbnail-developers">
+		<div class="col-lg-6 thumbnail-developers">
 				<img src="images/tools.svg" style="width: 140px; height: 140px;">
 		</div>
-		<div class="col-lg-6 content-column thumbnail-developers column-right">
+		<div class="col-lg-6 thumbnail-developers column-right">
 				<img src="images/buy.svg" style="width: 140px; height: 140px;">
 		</div>
 	</div>
