fixed heron and jumbotron

--- a/index.html
+++ b/index.html
@@ -4,7 +4,32 @@ layout: main
 css: index.css
 ---
 
-<div class="" style="background-image:url(../images/header.jpg)">
+
+<div class="intro-header">
+
+	<div class="container">
+
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="intro-message">
+					<h1>Search, properly done</h1>
+					<h3>A complete solution built for developers</h3>
+					<hr class="intro-divider">
+					<ul class="list-inline intro-social-buttons">
+						<li><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+	</div>
+	<!-- /.container -->
+
+</div>
+<!-- /.intro-header -->
+
+<!-- <div class="" style="background-image:url(../images/header.jpg)">
 
 	<div class="container">
 
@@ -28,10 +53,8 @@ css: index.css
 		</div>
 
 	</div>
-	<!-- /.container -->
 
-</div>
-<!-- /.intro-header -->
+</div>-->
 
 <div class="banner" style="background-color:white">
 
