browser in landing v2

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@ css: index.css
 
 	</div>
 
-	<img src="../images/browser.png" />
+	<div class="row browser">
+		<img src="../images/browser.png" />
+	</div>
 
 	<div class="content-section-b">
 
