remove our team

--- a/about-us.html
+++ b/about-us.html
@@ -24,7 +24,7 @@ css: about-us.css
 				</ul>
 			</div>
 		</div>
-	</div>
+	</div><!-- 
 		<div class="row">
 			<div class="col-lg-12">
 				<h2>Our team</h2>
@@ -104,6 +104,6 @@ css: about-us.css
 					</div>
 				<!-- </div> -->
 			</div>
-		</div>
+		</div> -->
 
 	</div>
