--- a/about-us.html
+++ b/about-us.html
@@ -31,77 +31,41 @@ css: about-us.css
 				<hr>
 					<div class="col-lg-3">
 						<div class="thumbnail-portrait">
-						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+						<img class="portrait" src="">
 							<div class="caption">
-								<h4>John Smith</h4>
+								<h4>Mehdi Bouheddi</h4>
 								<p>CEO</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-3">
 						<div class="thumbnail-portrait">
-						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+						<img class="portrait" src="">
 							<div class="caption">
-								<h4>John Smith</h4>
+								<h4>Matthieu Bacconnier</h4>
 								<p>CTO</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-3">
 						<div class="thumbnail-portrait">
-						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+						<img class="portrait" src="">
 							<div class="caption">
-								<h4>John Smith</h4>
-								<p>Intern</p>
+								<h4>Hugo Duroux</h4>
+								<p>Backend</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-3">
 						<div class="thumbnail-portrait">
-						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
+						<img class="portrait" src="">
 							<div class="caption">
-								<h4>John Smith</h4>
-								<p>Nombril centré</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-3">
-						<div class="thumbnail-portrait">
-						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
-							<div class="caption">
-								<h4>John Smith</h4>
-								<p>Nombril centré</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-3">
-						<div class="thumbnail-portrait">
-						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
-							<div class="caption">
-								<h4>John Smith</h4>
-								<p>Nombril centré</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-3">
-						<div class="thumbnail-portrait">
-						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
-							<div class="caption">
-								<h4>John Smith</h4>
-								<p>Nombril centré</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-3">
-						<div class="thumbnail-portrait">
-						<img class="portrait" src="http://static.squarespace.com/static/511bd9f9e4b082b64994c814/t/511f1775e4b084520081abef/1360992118895/PSY_1">
-							<div class="caption">
-								<h4>John Smith</h4>
-								<p>Nombril centré</p>
+								<h4>Tanguy Helesbeux</h4>
+								<p>Product</p>
 							</div>
 						</div>
 					</div>
 			</div>
 		</div> 
 
-	</div>
+</div>
