--- a/how-it-works.html
+++ b/how-it-works.html
@@ -13,26 +13,26 @@ css: how-it-works.css
 	<div class="row">
 					<div class="col-lg-3 content-column">
 						<h2>Sources</h2>
-						<p>Implementing a search engine is way too complicated and requires true expertise. This service must be reliable at any time and is reliant of its sources. It requires a lot of iterations to</p>
-						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/creating/provider.html" role="button">Make your own »</a></p>
+						<p>We call "document" any data that is created within an app.</p>
+						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/using/provider.html" role="button">Connect a new provider</a></p>
 					</div><!-- /.col-lg-5 -->
 
 					<div class="col-lg-3 content-column column-right">
 						<h2>Providers</h2>
-						<p>As IT is moving to the cloud, enterprise search has gone obsolete. Buying software and maintaining it is from another age. But legacy services are still here and have to be taken into consideration.</p>
-						<p><a class="btn btn-default" href="http://app.anyfetch.com" role="button">Get started »</a></p>
+						<p>We call "provider" the connector that retrieves data from a data source.</p>
+						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/create/provider.html" role="button">Create a provider</a></p>
 					</div><!-- /.col-lg-5 -->
 
 					<div class="col-lg-3 content-column column-right">
-						<h2>Content</h2>
-						<p>As IT is moving to the cloud, enterprise search has gone obsolete. Buying software and maintaining it is from another age. But legacy services are still here and have to be taken into consideration.</p>
-						<p><a class="btn btn-default" href="http://app.anyfetch.com" role="button">Get started »</a></p>
+						<h2>Extraction</h2>
+						<p>Datas are enhanced with meta-data : an image with OCR, a document with its full-text content. Each process can be customized with "hydraters".</p>
+						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/using/hydrater.html" role="button">Extract meta-data</a></p>
 					</div><!-- /.col-lg-5 -->
 
 					<div class="col-lg-3 content-column column-right">
-						<h2>Integration</h2>
-						<p>As IT is moving to the cloud, enterprise search has gone obsolete. Buying software and maintaining it is from another age. But legacy services are still here and have to be taken into consideration.</p>
-						<p><a class="btn btn-default" href="http://app.anyfetch.com" role="button">Get started »</a></p>
+						<h2>Context</h2>
+						<p>Customize the context to fetch relevant for any specific use case. You're an API call away to deliver the information on any device or application.</p>
+						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/creating/frontend.html" role="button">Create an app</a></p>
 					</div><!-- /.col-lg-5 -->
 
 	</div>
