--- a/how-it-works.html
+++ b/how-it-works.html
@@ -13,25 +13,25 @@ css: how-it-works.css
 	<div class="row">
 					<div class="col-lg-3 content-column">
 						<h2>Sources</h2>
-						<p>We call "document" any data that is created within an app.</p>
-						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/using/provider.html" role="button">Connect a new provider</a></p>
+						<p>We call <strong>"document"</strong> any element of data created within an app.</p>
+						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/using/provider.html" role="button">Connect a data source</a></p>
 					</div><!-- /.col-lg-5 -->
 
 					<div class="col-lg-3 content-column column-right">
 						<h2>Providers</h2>
-						<p>We call "provider" the connector that retrieves data from a data source.</p>
+						<p>We call "provider" the <strong>open-source</strong> connector that retrieves data from a data source.</p>
 						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/create/provider.html" role="button">Create a provider</a></p>
 					</div><!-- /.col-lg-5 -->
 
 					<div class="col-lg-3 content-column column-right">
 						<h2>Extraction</h2>
-						<p>Datas are enhanced with meta-data : an image with OCR, a document with its full-text content. Each process can be customized with "hydraters".</p>
+						<p>Datas are <strong>enhanced</strong> with meta-data : an image with OCR, a document with its full-text content. You can use your own code by creating an hydrater.</p>
 						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/using/hydrater.html" role="button">Extract meta-data</a></p>
 					</div><!-- /.col-lg-5 -->
 
 					<div class="col-lg-3 content-column column-right">
 						<h2>Context</h2>
-						<p>Customize the context to fetch relevant for any specific use case. You're an API call away to deliver the information on any device or application.</p>
+						<p>Customize the context to any specific use case. You're an API call away to deliver the right information on any device or application.</p>
 						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/creating/frontend.html" role="button">Create an app</a></p>
 					</div><!-- /.col-lg-5 -->
 
