--- a/how-it-works.html
+++ b/how-it-works.html
@@ -13,13 +13,13 @@ css: how-it-works.css
 	<div class="row">
 					<div class="col-lg-3 content-column">
 						<h2>Sources</h2>
-						<p>We call <strong>"document"</strong> any element of data created within an app.</p>
+						<p>A <strong>"document"</strong>is any element of data created within an app.</p>
 						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/using/provider.html" role="button">Connect a data source</a></p>
 					</div><!-- /.col-lg-5 -->
 
 					<div class="col-lg-3 content-column column-right">
 						<h2>Providers</h2>
-						<p>We call "provider" the <strong>open-source</strong> connector that retrieves data from a data source.</p>
+						<p>A "provider" is the <strong>open-source</strong> connector that retrieves data from a data source.</p>
 						<p><a class="btn btn-default" href="http://developers.anyfetch.com/guides/create/provider.html" role="button">Create a provider</a></p>
 					</div><!-- /.col-lg-5 -->
 
