How it works + icons + about us

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@ css: index.css
 			<div class="col-lg-12">
 				<div class="intro-message">
 					<h1>Search, properly done</h1>
+					<img class="source-icon" src="images/salesforce.png">
+					<img class="source-icon" src="images/gmail.png">
+					<img class="source-icon" src="images/drive.png">
+					<img class="source-icon" src="images/dropbox.png">
+					<img class="source-icon" src="images/evernote.png">
 					<h3>A complete solution built for developers</h3>
 					<hr class="intro-divider">
 					<ul class="list-inline intro-social-buttons">
