--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,18 @@ css: contact.css
 	<div class="row">
 
 		<div class="col-lg-12">
+
 			<h2>Contact</h2>
 			<hr>
-			<div class="col-lg-12 contact">
+			<div class="contact">
 				<p>
-				For more information or request, feel free to drop us an e-mail at:<br />
+				For more information or any request, feel free to drop us an e-mail at:<br />
 				<span class="email"><a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a></span>
 				</p>
+			</div>
+
+			<div class="jumbotron team">
+				
 			</div>
 		</div>
 	</div>
