--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ css: index.css
 					<img class="source-icon" src="images/drive.png">
 					<img class="source-icon" src="images/dropbox.png">
 					<img class="source-icon" src="images/evernote.png">
+					<img class="source-icon" src="images/database.png">
 					<h3>A complete solution built for developers</h3>
 					<hr class="intro-divider">
 					<ul class="list-inline intro-social-buttons">
