--- a/how-it-works.html
+++ b/how-it-works.html
@@ -47,7 +47,7 @@ layout: main
 				<hr class="section-heading-spacer">
 				<div class="clearfix"></div>
 				<h3>Security</h3>
-				<p class="lead">Security is of the uttermost importance to us because it is of the uttermost importance to you.</p>
+				<p class="lead">Security is of the uttermost importance to us, as it is to you.</p>
 				<p>We store all your files in secure indices, ensuring a strict no-access rule for all your data.<br />
 				All traffic between your servers and ours is encrypted using SSL.</p>
 
