--- a/how-it-works.html
+++ b/how-it-works.html
@@ -18,7 +18,7 @@ layout: main
 
 					<div class="col-lg-3 content-column column-right">
 						<h2>Providers</h2>
-						<p>A "provider" is the <strong>open-source</strong> connector that retrieves data from a data source. You can use the ones we have built for you or create your own for any source.</p>
+						<p>A "provider" is the <strong>open-source</strong> connector that retrieves data from a data source. You can use the providers we have built for you or create your own for any source.</p>
 						<p class="text-centered"><a class="btn btn-default" target="_blank" href="http://developers.anyfetch.com/guides/creating/provider.html" role="button">Create a provider</a></p>
 					</div><!-- /.col-lg-5 -->
 
