--- a/about-us.html
+++ b/about-us.html
@@ -67,4 +67,23 @@ layout: main
 			</div>
 		</div>
 
+		<div class="row" id="contact">
+
+			<div class="col-lg-12">
+
+				<h2>Contact</h2>
+				<hr>
+				<div class="contact">
+					<p>
+					For more information or any request, feel free to drop us an e-mail at:<br />
+					<span class="email"><a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a></span>
+					</p>
+				</div>
+
+				<div class="jumbotron team">
+
+				</div>
+			</div>
+		</div>
+
 </div>
