--- a/developers.html
+++ b/developers.html
@@ -25,7 +25,8 @@ layout: main
 						<li>Maintaining your solution over time by connecting new data sources while improving relevance globally is a full-time job</li>
 					</ul>
 				</p>
-				<p><a class="btn btn-default" href="how-it-works.html" role="button">See how it works »</a></p>
+				<br />
+				<p class="text-centered"><a class="btn btn-default" href="how-it-works.html" role="button">See how it works »</a></p>
 			</div><!-- /.col-lg-5 -->
 		</div>
 
@@ -41,12 +42,20 @@ layout: main
 					<li>Legacy services are still here with applications used in the consumer world</li>
 					<li>Enterprise search solutions have not evolved to handle this shift</li>
 				</ul>
-
-				<p>AnyFetch brings rapid prototyping, testing, and great user experience to the IT space so that in a couple of days, any developer can test, try and ship his product.</p>
-				<p><a class="btn btn-default" href="http://app.anyfetch.com" role="button">Get started »</a></p>
+				<br />
+				<br />
+				<br />
+				<br />
+				<p class="text-centered"><a class="btn btn-default" href="http://app.anyfetch.com" role="button">Get started »</a></p>
 			</div><!-- /.col-lg-5 -->
 		</div>
 
 	</div>
+
+	<div class="row">
+		<div class="col-lg-12">
+				<p class="text-centered">AnyFetch brings rapid prototyping, testing, and great user experience to the IT space so that in a couple of days, any developer can test, try and ship his product.</p>
+
+		</div>
 
 </div>
