--- a/use-cases.html
+++ b/use-cases.html
@@ -58,7 +58,7 @@ layout: main
 
 		<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
 			<div class="list-group">
-				<a href="#project1" class="list-group-item">Business assistant</a>
+				<a href="#project1" class="list-group-item" data-spy="scroll" data-target=".navbar-example">Business assistant</a>
 				<a href="#project2" class="list-group-item">Entreprise search</a>
 				<a href="#project3" class="list-group-item">Developers</a>
 			</div>
