--- a/how-it-works.html
+++ b/how-it-works.html
@@ -12,7 +12,7 @@ layout: main
 	<div class="row">
 					<div class="col-lg-3 content-column">
 						<h2>Sources</h2>
-						<p>A <strong>"document"</strong> is any element of data created within an app.<br /><br /><br /><br /><br /></p>
+						<p>A <strong>"document"</strong> is any element of data created within an app.<br /><br /><br /><br /><br /><br /></p>
 						<p class="text-centered"><a class="btn btn-default" target="_blank" href="http://developers.anyfetch.com/guides/using/provider.html" role="button">Connect a data source</a></p>
 					</div><!-- /.col-lg-5 -->
 
@@ -24,13 +24,13 @@ layout: main
 
 					<div class="col-lg-3 content-column column-right">
 						<h2>Extraction</h2>
-						<p>Datas are <strong>enhanced</strong> with meta-data : an image with OCR, a document with its full-text content. You can use your own code by creating an hydrater.</p>
+						<p>Datas are <strong>enhanced</strong> with meta-data : an image with OCR, a document with its full-text content. You can use your own code by creating an hydrater.<br /><br /></p>
 						<p class="text-centered"><a class="btn btn-default" target="_blank" href="http://developers.anyfetch.com/guides/using/hydrater.html" role="button">Extract meta-data</a></p>
 					</div><!-- /.col-lg-5 -->
 
 					<div class="col-lg-3 content-column column-right">
 						<h2>Context</h2>
-						<p>Customize the context to any specific use case. You're an API call away to deliver the right information on any device or application.<br /><br /></p>
+						<p>Customize the context to any specific use case. You're an API call away to deliver the right information on any device or application.<br ><br /><br /></p>
 						<p class="text-centered"><a class="btn btn-default" target="_blank" href="http://developers.anyfetch.com/guides/creating/frontend.html" role="button">Create an app</a></p>
 					</div><!-- /.col-lg-5 -->
 
