--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ layout: main
 
 		<div class="col-sm-6 col-md-4">
 			<div class="thumbnail-project">
-				<img src="images/key.svg">
+				<img src="images/customize.svg">
 				<div class="caption">
 					<h2>Customize your business context</h2>
 					<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
