Fix team picture

--- a/about-us.html
+++ b/about-us.html
@@ -5,25 +5,6 @@ layout: main
 
 
 <div class="container content">
-
-	<div class="row">
-
-		<div class="col-lg-12">
-			<h2>What is AnyFetch ?</h2>
-			<hr>
-			<div class="col-lg-6 col-lg-offset-3 biography">
-				<ul>
-				We created anyFetch because we needed a product that :
-					<li>Accepts data from both cloud and local data sources</li>
-					<li>Accepts any data format</li>
-					<li>Is cloud based, mobile first</li>
-					<li>Can be used by large, small businesses and developers</li>
-					<li>Delivers immediate value and can be fully tested online</li>
-					<li>IT professionals can trust and want to implement</li>
-				</ul>
-			</div>
-		</div>
-	</div>
 		<div class="row">
 			<div class="col-lg-12">
 				<h2>Our team</h2>
@@ -79,10 +60,12 @@ layout: main
 					<span class="email"><a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a></span>
 					</p>
 				</div>
+			</div>
+		</div>
 
-				<div class="jumbotron team">
-
-				</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<img class="team" src="images/team.jpg" />
 			</div>
 		</div>
 
