fix extension icon

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ layout: main
 
 
 
-	<img src="../images/browser.png" />
+	<img src="../images/browser.jpg" />
 </div>
 
 <div class="content-section-b">
