--- a/about-us.html
+++ b/about-us.html
@@ -11,7 +11,7 @@ layout: main
 				<hr>
 					<div class="col-lg-3">
 						<div class="thumbnail-portrait">
-						<img class="portrait" src="">
+						<img class="portrait" src="images/mehdi.jpg">
 							<div class="caption">
 								<h4>Mehdi Bouheddi</h4>
 								<p>CEO</p>
@@ -20,7 +20,7 @@ layout: main
 					</div>
 					<div class="col-lg-3">
 						<div class="thumbnail-portrait">
-						<img class="portrait" src="">
+						<img class="portrait" src="images/matthieu.jpg">
 							<div class="caption">
 								<h4>Matthieu Bacconnier</h4>
 								<p>CTO</p>
@@ -29,7 +29,7 @@ layout: main
 					</div>
 					<div class="col-lg-3">
 						<div class="thumbnail-portrait">
-						<img class="portrait" src="">
+						<img class="portrait" src="images/hugo.jpg">
 							<div class="caption">
 								<h4>Hugo Duroux</h4>
 								<p>Backend</p>
@@ -38,7 +38,7 @@ layout: main
 					</div>
 					<div class="col-lg-3">
 						<div class="thumbnail-portrait">
-						<img class="portrait" src="">
+						<img class="portrait" src="images/tanguy.jpg">
 							<div class="caption">
 								<h4>Tanguy Helesbeux</h4>
 								<p>Product</p>
